cmake_minimum_required(VERSION 3.4.1)


set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DALMIXER_COMPILE_WITHOUT_SDL -Wno-deprecated -std=c++14 -DANDROID_NDK -DDISABLE_IMPORTGL -DRtt_ANDROID_ENV -DRtt_FEATURES_ALL -DNDEBUG -DLUA_USE_POSIX -DLUA_USE_DLOPEN -DAVOID_TABLES -O3 -fstrict-aliasing -fvisibility=hidden -ffunction-sections -fdata-sections ")

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DALMIXER_COMPILE_WITHOUT_SDL -Wno-deprecated -DANDROID_NDK -DDISABLE_IMPORTGL -DRtt_ANDROID_ENV -DRtt_FEATURES_ALL -DNDEBUG -DLUA_USE_POSIX -DLUA_USE_DLOPEN -DAVOID_TABLES -O3 -fstrict-aliasing -fvisibility=hidden -ffunction-sections -fdata-sections ")


include_directories (
	${CORONA_ROOT}/external/sqlite3
	${LibLuaSoPath}
	${CORONA_ROOT}/external/rsa
	${CORONA_ROOT}/external/LuaHashMap
	${LibOpenALPath}/include/AL
	${LibAlMixerPath}
	${LibAlMixerPath}/Isolated
	${LibPngPath}
	${LuaSocketPath}/src
	${LuaLpegPath}
	${LuaFSPath}/src
	${CORONA_ROOT}/librtt
	${CORONA_ROOT}/librtt/Corona
	${CORONA_ROOT}/plugins/shared
	${CORONA_ROOT}/platform/android/ndk
	${CORONA_ROOT}/platform/shared
	${LibBox2DIncPath}
	${CORONA_ROOT}
    ${LibJpegPath}
    ${LibB2SeparatorPath}
    ${LibSmootPolygonPath}
    ${LibCoronaCMakePath}
    ${LibCoronaCMakePath}/jni
    ${ANDROID_NDK_ROOT}/sources/android/cpufeatures
)

SET( LUA_SOURCES
	"${CORONA_ROOT}/platform/android/ndk/shell.lua"
	"${CORONA_ROOT}/platform/resources/init.lua"
	"${CORONA_ROOT}/platform/resources/json.lua"
	"${CORONA_ROOT}/platform/resources/dkjson.lua"
	"${CORONA_ROOT}/platform/resources/runtime.lua"
	"${CORONA_ROOT}/platform/resources/loader_ccdata.lua"
	"${CORONA_ROOT}/platform/resources/loader_callback.lua"
	"${CORONA_ROOT}/platform/resources/launchpad.lua"
	"${CORONA_ROOT}/subrepos/easing/easing.lua"
	"${CORONA_ROOT}/subrepos/composer/composer.lua"
	"${CORONA_ROOT}/subrepos/composer/composer_scene.lua"
	"${CORONA_ROOT}/subrepos/timer/timer.lua"
	"${CORONA_ROOT}/subrepos/transition/transition.lua"
	"${CORONA_ROOT}/subrepos/transition/transition_v1.lua"
	"${CORONA_ROOT}/subrepos/widget/widgetLibrary/widget.lua"
	"${CORONA_ROOT}/subrepos/widget/widgetLibrary/widget_button.lua"
	"${CORONA_ROOT}/subrepos/widget/widgetLibrary/widget_momentumScrolling.lua"
	"${CORONA_ROOT}/subrepos/widget/widgetLibrary/widget_pickerWheel.lua"
	"${CORONA_ROOT}/subrepos/widget/widgetLibrary/widget_scrollview.lua"
	"${CORONA_ROOT}/subrepos/widget/widgetLibrary/widget_slider.lua"
	"${CORONA_ROOT}/subrepos/widget/widgetLibrary/widget_tabbar.lua"
	"${CORONA_ROOT}/subrepos/widget/widgetLibrary/widget_tableview.lua"
	"${CORONA_ROOT}/subrepos/widget/widgetLibrary/widget_progressView.lua"
	"${CORONA_ROOT}/subrepos/widget/widgetLibrary/widget_searchField.lua"
	"${CORONA_ROOT}/subrepos/widget/widgetLibrary/widget_segmentedControl.lua"
	"${CORONA_ROOT}/subrepos/widget/widgetLibrary/widget_spinner.lua"
	"${CORONA_ROOT}/subrepos/widget/widgetLibrary/widget_stepper.lua"
	"${CORONA_ROOT}/subrepos/widget/widgetLibrary/widget_switch.lua"
	"${CORONA_ROOT}/subrepos/widget/widget_theme_android_sheet.lua"
	"${CORONA_ROOT}/subrepos/widget/widget_theme_android.lua"
	"${CORONA_ROOT}/subrepos/widget/widget_theme_android_holo_dark.lua"
	"${CORONA_ROOT}/subrepos/widget/widget_theme_android_holo_dark_sheet.lua"
	"${CORONA_ROOT}/subrepos/widget/widget_theme_android_holo_light.lua"
	"${CORONA_ROOT}/subrepos/widget/widget_theme_android_holo_light_sheet.lua"
	"${CORONA_ROOT}/subrepos/widget/widget_theme_ios_sheet.lua"
	"${CORONA_ROOT}/subrepos/widget/widget_theme_ios.lua"
	"${CORONA_ROOT}/subrepos/widget/widget_theme_ios7_sheet.lua"
	"${CORONA_ROOT}/subrepos/widget/widget_theme_ios7.lua"
	"${CORONA_ROOT}/librtt/Corona/CoronaLibrary.lua"
	"${CORONA_ROOT}/librtt/Corona/CoronaPrototype.lua"
	"${CORONA_ROOT}/librtt/Corona/CoronaProvider.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_composite_add_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_composite_average_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_composite_color_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_composite_colorBurn_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_composite_colorDodge_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_composite_darken_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_composite_difference_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_composite_exclusion_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_composite_glow_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_composite_hardLight_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_composite_hardMix_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_composite_hue_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_composite_lighten_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_composite_linearLight_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_composite_luminosity_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_composite_multiply_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_composite_negation_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_composite_normalMapWith1DirLight_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_composite_normalMapWith1PointLight_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_composite_overlay_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_composite_phoenix_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_composite_pinLight_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_composite_reflect_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_composite_saturation_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_composite_screen_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_composite_softLight_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_composite_subtract_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_composite_vividLight_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_composite_yuv420f_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_default_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_bloom_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_blur_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_blurGaussian_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_blurHorizontal_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_blurVertical_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_brightness_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_bulge_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_chromaKey_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_color_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_colorChannelOffset_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_colorMatrix_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_colorPolynomial_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_contrast_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_crosshatch_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_crystallize_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_desaturate_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_dissolve_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_duotone_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_emboss_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_exposure_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_frostedGlass_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_grayscale_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_hue_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_invert_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_iris_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_levels_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_linearWipe_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_median_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_monotone_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_opTile_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_pixelate_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_polkaDots_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_posterize_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_radialWipe_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_saturate_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_scatter_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_sepia_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_sharpenLuminance_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_sobel_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_step_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_straighten_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_swirl_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_vignette_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_vignetteMask_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_water_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_wobble_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_woodCut_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_filter_zoomBlur_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_generator_checkerboard_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_generator_lenticularHalo_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_generator_linearGradient_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_generator_marchingAnts_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_generator_perlinNoise_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_generator_radialGradient_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_generator_random_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_generator_stripes_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/kernel_generator_sunbeams_gl.lua"
	"${CORONA_ROOT}/librtt/Display/Shader/shell_default_gl.lua"
	"${CORONA_ROOT}/external/lpeg/re.lua"
)

SET( LUA_SOCKET_SOURCES
	"${CORONA_ROOT}/external/luasocket/src/ftp.lua"
	"${CORONA_ROOT}/external/luasocket/src/headers.lua"
	"${CORONA_ROOT}/external/luasocket/src/http.lua"
	"${CORONA_ROOT}/external/luasocket/src/ltn12.lua"
	"${CORONA_ROOT}/external/luasocket/src/mbox.lua"
	"${CORONA_ROOT}/external/luasocket/src/mime.lua"
	"${CORONA_ROOT}/external/luasocket/src/smtp.lua"
	"${CORONA_ROOT}/external/luasocket/src/socket.lua"
	"${CORONA_ROOT}/external/luasocket/src/ssl.lua"
	"${CORONA_ROOT}/external/luasocket/src/tp.lua"
	"${CORONA_ROOT}/external/luasocket/src/url.lua"
)


FOREACH(LUA_FILE ${LUA_SOURCES})
	lua_2_cpp("${LUA_FILE}")
ENDFOREACH()

FOREACH(LUA_FILE ${LUA_SOCKET_SOURCES})
	lua_2_cpp("${LUA_FILE}" luasocket)
ENDFOREACH()



add_library( corona SHARED
		${LibNdkGenSharedPath}/init.cpp
		${LibNdkGenSharedPath}/runtime.cpp
		${LibNdkGenSharedPath}/easing.cpp
		${LibNdkGenSharedPath}/json.cpp
		${LibNdkGenSharedPath}/dkjson.cpp
		${LibNdkGenSharedPath}/loader_ccdata.cpp
		${LibNdkGenSharedPath}/loader_callback.cpp
		${LibNdkGenSharedPath}/launchpad.cpp
		${LibNdkGenSharedPath}/composer.cpp
		${LibNdkGenSharedPath}/composer_scene.cpp
		${LibNdkGenSharedPath}/timer.cpp
		${LibNdkGenSharedPath}/transition.cpp
		${LibNdkGenSharedPath}/transition_v1.cpp
		${LibNdkGenSharedPath}/widget.cpp
		${LibNdkGenSharedPath}/widget_button.cpp
		${LibNdkGenSharedPath}/widget_momentumScrolling.cpp
		${LibNdkGenSharedPath}/widget_pickerWheel.cpp
		${LibNdkGenSharedPath}/widget_scrollview.cpp
		${LibNdkGenSharedPath}/widget_slider.cpp
		${LibNdkGenSharedPath}/widget_tabbar.cpp
		${LibNdkGenSharedPath}/widget_tableview.cpp
		${LibNdkGenSharedPath}/widget_progressView.cpp
		${LibNdkGenSharedPath}/widget_searchField.cpp
		${LibNdkGenSharedPath}/widget_segmentedControl.cpp
		${LibNdkGenSharedPath}/widget_spinner.cpp
		${LibNdkGenSharedPath}/widget_stepper.cpp
		${LibNdkGenSharedPath}/widget_switch.cpp
		${LibNdkGenSharedPath}/widget_theme_android_sheet.cpp
		${LibNdkGenSharedPath}/widget_theme_android.cpp
		${LibNdkGenSharedPath}/widget_theme_android_holo_dark.cpp
		${LibNdkGenSharedPath}/widget_theme_android_holo_dark_sheet.cpp
		${LibNdkGenSharedPath}/widget_theme_android_holo_light.cpp
		${LibNdkGenSharedPath}/widget_theme_android_holo_light_sheet.cpp
		${LibNdkGenSharedPath}/widget_theme_ios_sheet.cpp
		${LibNdkGenSharedPath}/widget_theme_ios.cpp
		${LibNdkGenSharedPath}/widget_theme_ios7_sheet.cpp
		${LibNdkGenSharedPath}/widget_theme_ios7.cpp
		${LibNdkGenSharedPath}/shell.cpp
		${CORONA_ROOT}/platform/android/ndk/Rtt_AndroidAudioPlayer.cpp
		${CORONA_ROOT}/platform/android/ndk/Rtt_LuaLibOpenSLES.cpp
        ${CORONA_ROOT}/platform/android/ndk/Rtt_PlatformOpenSLESPlayer.cpp
		${CORONA_ROOT}/platform/android/ndk/Rtt_AndroidAudioRecorder.cpp
		${CORONA_ROOT}/platform/android/ndk/Rtt_AndroidBitmap.cpp
		${CORONA_ROOT}/platform/android/ndk/Rtt_AndroidCrypto.cpp
		${CORONA_ROOT}/platform/android/ndk/Rtt_AndroidData.cpp
		${CORONA_ROOT}/platform/android/ndk/Rtt_AndroidDisplayObject.cpp
		${CORONA_ROOT}/platform/android/ndk/Rtt_AndroidEventSound.cpp
		${CORONA_ROOT}/platform/android/ndk/Rtt_AndroidFont.cpp
		${CORONA_ROOT}/platform/android/ndk/Rtt_AndroidImageProvider.cpp
		${CORONA_ROOT}/platform/android/ndk/Rtt_AndroidInputDevice.cpp
		${CORONA_ROOT}/platform/android/ndk/Rtt_AndroidInputDeviceManager.cpp
		${CORONA_ROOT}/platform/android/ndk/Rtt_AndroidLocation.cpp
		${CORONA_ROOT}/platform/android/ndk/Rtt_AndroidMapViewObject.cpp
		${CORONA_ROOT}/platform/android/ndk/Rtt_AndroidModalInteraction.cpp
		${CORONA_ROOT}/platform/android/ndk/Rtt_AndroidDevice.cpp
		${CORONA_ROOT}/platform/android/ndk/Rtt_AndroidPlatform.cpp
		${CORONA_ROOT}/platform/android/ndk/Rtt_AndroidRuntimeDelegate.cpp
		${CORONA_ROOT}/platform/android/ndk/Rtt_AndroidScreenSurface.cpp
		${CORONA_ROOT}/platform/android/ndk/Rtt_AndroidStore.cpp
		${CORONA_ROOT}/platform/android/ndk/Rtt_AndroidStoreProvider.cpp
		${CORONA_ROOT}/platform/android/ndk/Rtt_AndroidStoreTransaction.cpp
		${CORONA_ROOT}/platform/android/ndk/Rtt_AndroidSurface.cpp
		${CORONA_ROOT}/platform/android/ndk/Rtt_AndroidSystemOpenEvent.cpp
		${CORONA_ROOT}/platform/android/ndk/Rtt_AndroidTimer.cpp
		${CORONA_ROOT}/platform/android/ndk/Rtt_AndroidTextFieldObject.cpp
		${CORONA_ROOT}/platform/android/ndk/Rtt_AndroidVideoObject.cpp
		${CORONA_ROOT}/platform/android/ndk/Rtt_AndroidVideoPlayer.cpp
		${CORONA_ROOT}/platform/android/ndk/Rtt_AndroidVideoProvider.cpp
		${CORONA_ROOT}/platform/android/ndk/Rtt_AndroidWebPopup.cpp
		${CORONA_ROOT}/platform/android/ndk/Rtt_AndroidWebViewObject.cpp
		${CORONA_ROOT}/platform/android/ndk/AndroidBinaryReader.cpp
		${CORONA_ROOT}/platform/android/ndk/AndroidBinaryReadResult.cpp
		${CORONA_ROOT}/platform/android/ndk/AndroidDisplayObjectRegistry.cpp
		${CORONA_ROOT}/platform/android/ndk/AndroidFileReader.cpp
		${CORONA_ROOT}/platform/android/ndk/AndroidFontSettings.cpp
		${CORONA_ROOT}/platform/android/ndk/AndroidGLView.cpp
		${CORONA_ROOT}/platform/android/ndk/AndroidBaseImageDecoder.cpp
		${CORONA_ROOT}/platform/android/ndk/AndroidBaseNativeImageDecoder.cpp
		${CORONA_ROOT}/platform/android/ndk/AndroidImageData.cpp
		${CORONA_ROOT}/platform/android/ndk/AndroidImageDecoder.cpp
		${CORONA_ROOT}/platform/android/ndk/AndroidJavaImageDecoder.cpp
		${CORONA_ROOT}/platform/android/ndk/AndroidKeyServices.cpp
		${CORONA_ROOT}/platform/android/ndk/AndroidNativePngDecoder.cpp
		${CORONA_ROOT}/platform/android/ndk/AndroidOperationResult.cpp
		${CORONA_ROOT}/platform/android/ndk/AndroidZipFileEntry.cpp
		${CORONA_ROOT}/external/rsa/prime.cpp
		${CORONA_ROOT}/external/rsa/rsa.cpp
		${CORONA_ROOT}/external/rsa/vlong.cpp
		${CORONA_ROOT}/external/rsa/vlong_io.cpp

		${LuaSocketPath}/src/auxiliar.c
		${LuaSocketPath}/src/compat.c
		${LuaSocketPath}/src/except.c
		${LuaSocketPath}/src/io.c
		${LuaSocketPath}/src/mime.c
		${LuaSocketPath}/src/select.c
		${LuaSocketPath}/src/timeout.c
		${LuaSocketPath}/src/unix.c
		${LuaSocketPath}/src/buffer.c
		${LuaSocketPath}/src/inet.c
		${LuaSocketPath}/src/luasocket.c
		${LuaSocketPath}/src/options.c
		${LuaSocketPath}/src/tcp.c
		${LuaSocketPath}/src/udp.c
		${LuaSocketPath}/src/usocket.c

		${LibNdkGenSharedPath}/ftp.cpp
		${LibNdkGenSharedPath}/headers.cpp
		${LibNdkGenSharedPath}/http.cpp
		${LibNdkGenSharedPath}/ltn12.cpp
		${LibNdkGenSharedPath}/mbox.cpp
		${LibNdkGenSharedPath}/mime.cpp
		${LibNdkGenSharedPath}/smtp.cpp
		${LibNdkGenSharedPath}/socket.cpp
		${LibNdkGenSharedPath}/ssl.cpp
		${LibNdkGenSharedPath}/tp.cpp
		${LibNdkGenSharedPath}/url.cpp
		
		${CORONA_ROOT}/external/LuaHashMap/LuaHashMap.c
		${CORONA_ROOT}/librtt/Core/Rtt_Allocator.cpp
		${CORONA_ROOT}/librtt/Core/Rtt_Array.cpp
		${CORONA_ROOT}/librtt/Core/Rtt_ArrayTuple.cpp
		${CORONA_ROOT}/librtt/Core/Rtt_Assert.c
		${CORONA_ROOT}/librtt/Core/Rtt_AutoResource.cpp
		${CORONA_ROOT}/librtt/Core/Rtt_FileSystem.cpp
		${CORONA_ROOT}/librtt/Core/Rtt_Fixed.c
		${CORONA_ROOT}/librtt/Core/Rtt_FixedBlockAllocator.cpp
		${CORONA_ROOT}/librtt/Core/Rtt_FixedMath.c
		${CORONA_ROOT}/librtt/Core/Rtt_Geometry.cpp
		${CORONA_ROOT}/librtt/Core/Rtt_MD4.c
		${CORONA_ROOT}/librtt/Core/Rtt_Math.c
		${CORONA_ROOT}/librtt/Core/Rtt_MessageDigest.cpp
		${CORONA_ROOT}/librtt/Core/Rtt_OperationResult.cpp
		${CORONA_ROOT}/librtt/Core/Rtt_RefCount.cpp
		${CORONA_ROOT}/librtt/Core/Rtt_ResourceHandle.cpp
		${CORONA_ROOT}/librtt/Core/Rtt_SharedCount.cpp
		${CORONA_ROOT}/librtt/Core/Rtt_String.cpp
		${CORONA_ROOT}/librtt/Core/Rtt_StringHash.cpp
		${CORONA_ROOT}/librtt/Core/Rtt_Time.c
		${CORONA_ROOT}/librtt/Core/Rtt_UseCount.cpp
		${CORONA_ROOT}/librtt/Core/Rtt_VersionTimestamp.c
		${CORONA_ROOT}/librtt/Core/Rtt_WeakCount.cpp
		${CORONA_ROOT}/librtt/Corona/CoronaAssert.c
		${CORONA_ROOT}/librtt/Corona/CoronaEvent.cpp
		${CORONA_ROOT}/librtt/Corona/CoronaLibrary.cpp
		${CORONA_ROOT}/librtt/Corona/CoronaLog.c
		${CORONA_ROOT}/librtt/Corona/CoronaLua.cpp
		${CORONA_ROOT}/librtt/Corona/CoronaVersion.c
		${CORONA_ROOT}/librtt/Corona/CoronaGraphics.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_BitmapMask.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_BitmapPaint.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_BitmapPaintAdapter.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_ImageSheetPaintAdapter.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_BufferBitmap.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_CameraPaint.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_ClosedPath.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_CompositeObject.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_CompositePaint.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_ContainerObject.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_CPUResourcePool.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_Display.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_DisplayDefaults.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_DisplayObject.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_DisplayPath.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_DisplayV2.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_EmbossedTextObject.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_EmitterObject.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_GradientPaint.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_GradientPaintAdapter.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_GroupObject.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_ImageFrame.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_ImageSheet.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_ImageSheetPaint.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_ImageSheetUserdata.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_LineObject.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_LuaLibDisplay.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_LuaLibGraphics.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_OpenPath.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_Paint.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_PaintAdapter.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_PlatformBitmap.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_PlatformBitmapTexture.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_RectObject.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_RectPath.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_Scene.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_Shader.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_ShaderBuiltin.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_ShaderComposite.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_ShaderCompositeAdapter.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_ShaderData.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_ShaderDataAdapter.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_ShaderFactory.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_ShaderInput.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_ShaderName.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_ShaderProxy.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_ShaderResource.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_ShaderTypes.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_ShapeAdapter.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_ShapeAdapterCircle.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_ShapeAdapterMesh.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_ShapeAdapterPolygon.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_ShapeAdapterRect.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_ShapeAdapterRoundedRect.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_ShapeObject.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_ShapePath.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_SnapshotObject.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_SpriteObject.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_SpritePlayer.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_SpriteSourceFrame.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_StageObject.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_Tesselator.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_TesselatorCircle.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_TesselatorLine.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_TesselatorPolygon.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_TesselatorMesh.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_TesselatorRect.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_TesselatorRoundedRect.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_TesselatorShape.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_TextObject.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_TextureFactory.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_TextureResource.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_TextureResourceAdapter.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_TextureResourceBitmap.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_TextureResourceBitmapAdapter.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_TextureResourceCanvas.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_TextureResourceCanvasAdapter.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_TextureResourceExternal.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_TextureResourceExternalAdapter.cpp
		${CORONA_ROOT}/librtt/Display/Rtt_VertexCache.cpp
		${CORONA_ROOT}/librtt/Input/Rtt_InputAxisCollection.cpp
		${CORONA_ROOT}/librtt/Input/Rtt_InputAxisDescriptor.cpp
		${CORONA_ROOT}/librtt/Input/Rtt_InputAxisType.cpp
		${CORONA_ROOT}/librtt/Input/Rtt_InputDeviceCollection.cpp
		${CORONA_ROOT}/librtt/Input/Rtt_InputDeviceConnectionState.cpp
		${CORONA_ROOT}/librtt/Input/Rtt_InputDeviceDescriptor.cpp
		${CORONA_ROOT}/librtt/Input/Rtt_InputDeviceType.cpp
		${CORONA_ROOT}/librtt/Input/Rtt_PlatformInputAxis.cpp
		${CORONA_ROOT}/librtt/Input/Rtt_PlatformInputDevice.cpp
		${CORONA_ROOT}/librtt/Input/Rtt_PlatformInputDeviceManager.cpp
		${CORONA_ROOT}/librtt/Input/Rtt_ReadOnlyInputAxisCollection.cpp
		${CORONA_ROOT}/librtt/Input/Rtt_ReadOnlyInputDeviceCollection.cpp
		${CORONA_ROOT}/librtt/b2GLESDebugDraw.cpp
		${CORONA_ROOT}/librtt/Rtt_Archive.cpp
		${CORONA_ROOT}/librtt/Rtt_CKWorkflow.cpp
		${CORONA_ROOT}/librtt/Rtt_DeviceOrientation.cpp
		${CORONA_ROOT}/librtt/Rtt_DisplayObjectExtensions.cpp
		${CORONA_ROOT}/librtt/Rtt_Event.cpp
		${CORONA_ROOT}/librtt/Rtt_ExplicitTemplates.cpp
		${CORONA_ROOT}/librtt/Rtt_FilePath.cpp
		${CORONA_ROOT}/librtt/Rtt_GPUStream.cpp
		${CORONA_ROOT}/librtt/Rtt_HitTestObject.cpp
		${CORONA_ROOT}/librtt/Rtt_KeyName.cpp
		${CORONA_ROOT}/librtt/Rtt_Lua.cpp
		${CORONA_ROOT}/librtt/Rtt_LuaAssert.cpp
		${CORONA_ROOT}/librtt/Rtt_LuaAux.cpp
		${CORONA_ROOT}/librtt/Rtt_LuaContainer.cpp
		${CORONA_ROOT}/librtt/Rtt_LuaContext.cpp
		${CORONA_ROOT}/librtt/Rtt_LuaCoronaBaseLib.c
		${CORONA_ROOT}/librtt/Rtt_LuaData.cpp
		${CORONA_ROOT}/librtt/Rtt_LuaLibCrypto.cpp
		${CORONA_ROOT}/librtt/Rtt_LuaLibFacebook.cpp
		${CORONA_ROOT}/librtt/Rtt_LuaLibFlurry.cpp
		${CORONA_ROOT}/librtt/Rtt_LuaLibGameNetwork.cpp
		${CORONA_ROOT}/librtt/Rtt_LuaLibInAppStore.cpp
		${CORONA_ROOT}/librtt/Rtt_LuaLibMedia.cpp
		${CORONA_ROOT}/librtt/Rtt_LuaLibNative.cpp
		${CORONA_ROOT}/librtt/Rtt_LuaLibOpenAL.cpp
		${CORONA_ROOT}/librtt/Rtt_LuaLibPhysics.cpp
		${CORONA_ROOT}/librtt/Rtt_LuaLibSQLite.cpp
		${CORONA_ROOT}/librtt/Rtt_LuaLibSystem.cpp
		${CORONA_ROOT}/librtt/Rtt_LuaProxy.cpp
		${CORONA_ROOT}/librtt/Rtt_LuaProxyVTable.cpp
		${CORONA_ROOT}/librtt/Rtt_LuaResource.cpp
		${CORONA_ROOT}/librtt/Rtt_LuaResourceOwner.cpp
		${CORONA_ROOT}/librtt/Rtt_LuaTableIterator.cpp
		${CORONA_ROOT}/librtt/Rtt_LuaUserdataProxy.cpp
		${CORONA_ROOT}/librtt/Rtt_Matrix.cpp
		${CORONA_ROOT}/librtt/Rtt_Message.cpp
		${CORONA_ROOT}/librtt/Rtt_ParticleSystemObject.cpp
		${CORONA_ROOT}/librtt/Rtt_PhysicsContact.cpp
		${CORONA_ROOT}/librtt/Rtt_PhysicsContactListener.cpp
		${CORONA_ROOT}/librtt/Rtt_PhysicsJoint.cpp
		${CORONA_ROOT}/librtt/Rtt_PhysicsWorld.cpp
		${CORONA_ROOT}/librtt/Rtt_PlatformAudioPlayer.cpp
		${CORONA_ROOT}/librtt/Rtt_PlatformAudioRecorder.cpp
		${CORONA_ROOT}/librtt/Rtt_PlatformAudioSessionManager.cpp
		${CORONA_ROOT}/librtt/Rtt_PlatformData.cpp
		${CORONA_ROOT}/librtt/Rtt_PlatformDisplayObject.cpp
		${CORONA_ROOT}/librtt/Rtt_PlatformEventSound.cpp
		${CORONA_ROOT}/librtt/Rtt_PlatformExitCallback.cpp
		${CORONA_ROOT}/librtt/Rtt_PlatformFBConnect.cpp
		${CORONA_ROOT}/librtt/Rtt_PlatformFont.cpp
		${CORONA_ROOT}/librtt/Rtt_PlatformImageProvider.cpp
		${CORONA_ROOT}/librtt/Rtt_PlatformInAppStore.cpp
		${CORONA_ROOT}/librtt/Rtt_PlatformLocation.cpp
		${CORONA_ROOT}/librtt/Rtt_PlatformModalInteraction.cpp
		${CORONA_ROOT}/librtt/Rtt_PlatformNotifier.cpp
		${CORONA_ROOT}/librtt/Rtt_PlatformOpenALPlayer.cpp
		${CORONA_ROOT}/librtt/Rtt_PlatformReachability.cpp
		${CORONA_ROOT}/librtt/Rtt_PlatformSurface.cpp
		${CORONA_ROOT}/librtt/Rtt_PlatformTimer.cpp
		${CORONA_ROOT}/librtt/Rtt_PlatformVideoPlayer.cpp
		${CORONA_ROOT}/librtt/Rtt_PlatformVideoProvider.cpp
		${CORONA_ROOT}/librtt/Rtt_PlatformWebPopup.cpp
		${CORONA_ROOT}/librtt/Rtt_Preference.cpp
		${CORONA_ROOT}/librtt/Rtt_PreferenceCollection.cpp
		${CORONA_ROOT}/librtt/Rtt_PreferenceValue.cpp
		${CORONA_ROOT}/librtt/Rtt_RenderingStream.cpp
		${CORONA_ROOT}/librtt/Rtt_Resource.cpp
		${CORONA_ROOT}/librtt/Rtt_Runtime.cpp
		${CORONA_ROOT}/librtt/Rtt_RuntimeDelegate.cpp
		${CORONA_ROOT}/librtt/Rtt_RuntimeDelegatePlayer.cpp
		${CORONA_ROOT}/librtt/Rtt_Scheduler.cpp
		${CORONA_ROOT}/librtt/Rtt_Transform.cpp
		${CORONA_ROOT}/librtt/Rtt_Verifier.cpp
		${LibNdkGenSharedPath}/CoronaLibrary.cpp
		${LibNdkGenSharedPath}/CoronaPrototype.cpp
		${LibNdkGenSharedPath}/CoronaProvider.cpp
		${LibNdkGenSharedPath}/kernel_composite_add_gl.cpp
		${LibNdkGenSharedPath}/kernel_composite_average_gl.cpp
		${LibNdkGenSharedPath}/kernel_composite_color_gl.cpp
		${LibNdkGenSharedPath}/kernel_composite_colorBurn_gl.cpp
		${LibNdkGenSharedPath}/kernel_composite_colorDodge_gl.cpp
		${LibNdkGenSharedPath}/kernel_composite_darken_gl.cpp
		${LibNdkGenSharedPath}/kernel_composite_difference_gl.cpp
		${LibNdkGenSharedPath}/kernel_composite_exclusion_gl.cpp
		${LibNdkGenSharedPath}/kernel_composite_glow_gl.cpp
		${LibNdkGenSharedPath}/kernel_composite_hardLight_gl.cpp
		${LibNdkGenSharedPath}/kernel_composite_hardMix_gl.cpp
		${LibNdkGenSharedPath}/kernel_composite_hue_gl.cpp
		${LibNdkGenSharedPath}/kernel_composite_lighten_gl.cpp
		${LibNdkGenSharedPath}/kernel_composite_linearLight_gl.cpp
		${LibNdkGenSharedPath}/kernel_composite_luminosity_gl.cpp
		${LibNdkGenSharedPath}/kernel_composite_multiply_gl.cpp
		${LibNdkGenSharedPath}/kernel_composite_negation_gl.cpp
		${LibNdkGenSharedPath}/kernel_composite_normalMapWith1DirLight_gl.cpp
		${LibNdkGenSharedPath}/kernel_composite_normalMapWith1PointLight_gl.cpp
		${LibNdkGenSharedPath}/kernel_composite_overlay_gl.cpp
		${LibNdkGenSharedPath}/kernel_composite_phoenix_gl.cpp
		${LibNdkGenSharedPath}/kernel_composite_pinLight_gl.cpp
		${LibNdkGenSharedPath}/kernel_composite_reflect_gl.cpp
		${LibNdkGenSharedPath}/kernel_composite_saturation_gl.cpp
		${LibNdkGenSharedPath}/kernel_composite_screen_gl.cpp
		${LibNdkGenSharedPath}/kernel_composite_softLight_gl.cpp
		${LibNdkGenSharedPath}/kernel_composite_subtract_gl.cpp
		${LibNdkGenSharedPath}/kernel_composite_vividLight_gl.cpp
		${LibNdkGenSharedPath}/kernel_composite_yuv420f_gl.cpp
		${LibNdkGenSharedPath}/kernel_default_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_bloom_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_blur_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_blurGaussian_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_blurHorizontal_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_blurVertical_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_brightness_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_bulge_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_chromaKey_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_color_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_colorChannelOffset_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_colorMatrix_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_colorPolynomial_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_contrast_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_crosshatch_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_crystallize_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_desaturate_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_dissolve_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_duotone_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_emboss_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_exposure_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_frostedGlass_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_grayscale_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_hue_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_invert_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_iris_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_levels_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_linearWipe_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_median_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_monotone_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_opTile_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_pixelate_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_polkaDots_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_posterize_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_radialWipe_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_saturate_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_scatter_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_sepia_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_sharpenLuminance_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_sobel_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_step_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_straighten_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_swirl_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_vignette_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_vignetteMask_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_water_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_wobble_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_woodCut_gl.cpp
		${LibNdkGenSharedPath}/kernel_filter_zoomBlur_gl.cpp
		${LibNdkGenSharedPath}/kernel_generator_checkerboard_gl.cpp
		${LibNdkGenSharedPath}/kernel_generator_lenticularHalo_gl.cpp
		${LibNdkGenSharedPath}/kernel_generator_linearGradient_gl.cpp
		${LibNdkGenSharedPath}/kernel_generator_marchingAnts_gl.cpp
		${LibNdkGenSharedPath}/kernel_generator_perlinNoise_gl.cpp
		${LibNdkGenSharedPath}/kernel_generator_radialGradient_gl.cpp
		${LibNdkGenSharedPath}/kernel_generator_random_gl.cpp
		${LibNdkGenSharedPath}/kernel_generator_stripes_gl.cpp
		${LibNdkGenSharedPath}/kernel_generator_sunbeams_gl.cpp
		${LibNdkGenSharedPath}/shell_default_gl.cpp

		${TachyonPath}/Rtt_CommandBuffer.cpp
		${TachyonPath}/Rtt_CPUResource.cpp
		${TachyonPath}/Rtt_FrameBufferObject.cpp
		${TachyonPath}/Rtt_Geometry_Renderer.cpp
		${TachyonPath}/Rtt_GeometryPool.cpp
		${TachyonPath}/Rtt_GL.cpp
		${TachyonPath}/Rtt_GLCommandBuffer.cpp
		${TachyonPath}/Rtt_GLFrameBufferObject.cpp
		${TachyonPath}/Rtt_GLGeometry.cpp
		${TachyonPath}/Rtt_GLProgram.cpp
		${TachyonPath}/Rtt_GLRenderer.cpp
		${TachyonPath}/Rtt_GLTexture.cpp
		${TachyonPath}/Rtt_GPUResource.cpp
		${TachyonPath}/Rtt_HighPrecisionTime.cpp
		${TachyonPath}/Rtt_Matrix_Renderer.cpp
		${TachyonPath}/Rtt_Program.cpp
		${TachyonPath}/Rtt_ProgramFactory.cpp
		${TachyonPath}/Rtt_RenderData.cpp
		${TachyonPath}/Rtt_Renderer.cpp
		${TachyonPath}/Rtt_RenderTypes.cpp
		${TachyonPath}/Rtt_Texture.cpp
		${TachyonPath}/Rtt_TextureBitmap.cpp
		${TachyonPath}/Rtt_TextureVolatile.cpp
		${TachyonPath}/Rtt_Uniform.cpp
		${TachyonPath}/Rtt_VideoTexture.cpp

		${LibPluginsPath}/CoronaLuaLibrary.cpp
		${LibPluginsPath}/CoronaLuaLibraryMetadata.cpp

		${LibSharedPath}/Rtt_DependencyLoader.cpp
		${LibSharedPath}/Rtt_DependencyUtilsAndroid.cpp

		${LibPngPath}/png.c
		${LibPngPath}/pngerror.c
		${LibPngPath}/pnggccrd.c
		${LibPngPath}/pngget.c
		${LibPngPath}/pngmem.c
		${LibPngPath}/pngpread.c
		${LibPngPath}/pngread.c
		${LibPngPath}/pngrio.c
		${LibPngPath}/pngrtran.c
		${LibPngPath}/pngrutil.c
		${LibPngPath}/pngset.c
		${LibPngPath}/pngtrans.c
		${LibPngPath}/pngvcrd.c
		${LibPngPath}/pngwio.c
		${LibPngPath}/pngwrite.c
		${LibPngPath}/pngwtran.c
		${LibPngPath}/pngwutil.c

		${LuaLpegPath}/lpeg.c
		${LibNdkGenSharedPath}/re.cpp

		${LuaFSPath}/src/lfs.c

		${LibSqlitePath}/sqlite3.c
		${CORONA_ROOT}/external/lsqlite3-7/lsqlite3.c

		${LibBox2DPath}/Collision/b2BroadPhase.cpp
		${LibBox2DPath}/Collision/b2CollideCircle.cpp
		${LibBox2DPath}/Collision/b2CollideEdge.cpp
		${LibBox2DPath}/Collision/b2CollidePolygon.cpp
		${LibBox2DPath}/Collision/b2Collision.cpp
		${LibBox2DPath}/Collision/b2Distance.cpp
		${LibBox2DPath}/Collision/b2DynamicTree.cpp
		${LibBox2DPath}/Collision/b2TimeOfImpact.cpp
		${LibBox2DPath}/Collision/Shapes/b2ChainShape.cpp
		${LibBox2DPath}/Collision/Shapes/b2CircleShape.cpp
		${LibBox2DPath}/Collision/Shapes/b2EdgeShape.cpp
		${LibBox2DPath}/Collision/Shapes/b2PolygonShape.cpp
		${LibBox2DPath}/Common/b2BlockAllocator.cpp
		${LibBox2DPath}/Common/b2Draw.cpp
		${LibBox2DPath}/Common/b2FreeList.cpp
		${LibBox2DPath}/Common/b2Math.cpp
		${LibBox2DPath}/Common/b2Settings.cpp
		${LibBox2DPath}/Common/b2StackAllocator.cpp
		${LibBox2DPath}/Common/b2Stat.cpp
		${LibBox2DPath}/Common/b2Timer.cpp
		${LibBox2DPath}/Common/b2TrackedBlock.cpp
		${LibBox2DPath}/Dynamics/b2Body.cpp
		${LibBox2DPath}/Dynamics/b2ContactManager.cpp
		${LibBox2DPath}/Dynamics/b2Fixture.cpp
		${LibBox2DPath}/Dynamics/b2Island.cpp
		${LibBox2DPath}/Dynamics/b2World.cpp
		${LibBox2DPath}/Dynamics/b2WorldCallbacks.cpp
		${LibBox2DPath}/Dynamics/Contacts/b2ChainAndCircleContact.cpp
		${LibBox2DPath}/Dynamics/Contacts/b2ChainAndPolygonContact.cpp
		${LibBox2DPath}/Dynamics/Contacts/b2CircleContact.cpp
		${LibBox2DPath}/Dynamics/Contacts/b2Contact.cpp
		${LibBox2DPath}/Dynamics/Contacts/b2ContactSolver.cpp
		${LibBox2DPath}/Dynamics/Contacts/b2EdgeAndCircleContact.cpp
		${LibBox2DPath}/Dynamics/Contacts/b2EdgeAndPolygonContact.cpp
		${LibBox2DPath}/Dynamics/Contacts/b2PolygonAndCircleContact.cpp
		${LibBox2DPath}/Dynamics/Contacts/b2PolygonContact.cpp
		${LibBox2DPath}/Dynamics/Joints/b2DistanceJoint.cpp
		${LibBox2DPath}/Dynamics/Joints/b2FrictionJoint.cpp
		${LibBox2DPath}/Dynamics/Joints/b2GearJoint.cpp
		${LibBox2DPath}/Dynamics/Joints/b2Joint.cpp
		${LibBox2DPath}/Dynamics/Joints/b2MotorJoint.cpp
		${LibBox2DPath}/Dynamics/Joints/b2MouseJoint.cpp
		${LibBox2DPath}/Dynamics/Joints/b2PrismaticJoint.cpp
		${LibBox2DPath}/Dynamics/Joints/b2PulleyJoint.cpp
		${LibBox2DPath}/Dynamics/Joints/b2RevoluteJoint.cpp
		${LibBox2DPath}/Dynamics/Joints/b2RopeJoint.cpp
		${LibBox2DPath}/Dynamics/Joints/b2WeldJoint.cpp
		${LibBox2DPath}/Dynamics/Joints/b2WheelJoint.cpp
		${LibBox2DPath}/Particle/b2Particle.cpp
		${LibBox2DPath}/Particle/b2ParticleAssembly.cpp
		${LibBox2DPath}/Particle/b2ParticleGroup.cpp
		${LibBox2DPath}/Particle/b2ParticleSystem.cpp
		${LibBox2DPath}/Particle/b2VoronoiDiagram.cpp

		${LibB2SeparatorPath}/b2Separator.cpp
		${LibSmootPolygonPath}/SmoothPolygon.cpp

		${LibJpegPath}/jcapimin.c
		${LibJpegPath}/jcapistd.c
		${LibJpegPath}/jccoefct.c
		${LibJpegPath}/jccolor.c
		${LibJpegPath}/jcdctmgr.c
		${LibJpegPath}/jchuff.c
		${LibJpegPath}/jcinit.c
		${LibJpegPath}/jcmainct.c
		${LibJpegPath}/jcmarker.c
		${LibJpegPath}/jcmaster.c
		${LibJpegPath}/jcomapi.c
		${LibJpegPath}/jcparam.c
		${LibJpegPath}/jcphuff.c
		${LibJpegPath}/jcprepct.c
		${LibJpegPath}/jcsample.c
		${LibJpegPath}/jctrans.c
		${LibJpegPath}/jdapimin.c
		${LibJpegPath}/jdapistd.c
		${LibJpegPath}/jdatadst.c
		${LibJpegPath}/jdatasrc.c
		${LibJpegPath}/jdcoefct.c
		${LibJpegPath}/jdcolor.c
		${LibJpegPath}/jddctmgr.c
		${LibJpegPath}/jdhuff.c
		${LibJpegPath}/jdinput.c
		${LibJpegPath}/jdmainct.c
		${LibJpegPath}/jdmarker.c
		${LibJpegPath}/jdmaster.c
		${LibJpegPath}/jdmerge.c
		${LibJpegPath}/jdphuff.c
		${LibJpegPath}/jdpostct.c
		${LibJpegPath}/jdsample.c
		${LibJpegPath}/jdtrans.c
		${LibJpegPath}/jerror.c
		${LibJpegPath}/jfdctflt.c
		${LibJpegPath}/jfdctfst.c
		${LibJpegPath}/jfdctint.c
		${LibJpegPath}/jidctflt.c
		${LibJpegPath}/jidctred.c
		${LibJpegPath}/jquant1.c
		${LibJpegPath}/jquant2.c
		${LibJpegPath}/jutils.c
		${LibJpegPath}/jmemmgr.c
		${LibJpegPath}/jmem-android.c
		${LibJpegPath}/jidctint.c
		${LibJpegPath}/jidctfst.c

		jni/importgl.c
		jni/JavaToNativeBridge.cpp
		jni/JavaToNativeShim.cpp
		jni/NativeToJavaBridge.cpp
)

target_link_libraries ( corona lua jnlua5.1 mpg123 openal almixer cpufeatures GLESv2 EGL jnigraphics dl log z OpenSLES )
